--- a/.sync.yml
+++ b/.sync.yml
@@ -1,9 +1,5 @@
 ---
-".gitlab-ci.yml":
-  delete: true
-appveyor.yml:
-  delete: true
-rubocop.yml:
+.rubocop.yml:
   include_todos: true
 
 
@@ -12,10 +8,7 @@ spec/spec_helper.rb:
   - require 'spec_helper_local'
   coverage_report: true
 "  changelog_user": puppetlabs
-.gitpod.Dockerfile:
-  unmanaged: false
-.gitpod.yml:
-  unmanaged: false
+
 .github/workflows/auto_release.yml:
   unmanaged: false
 .github/workflows/ci.yml:
@@ -24,9 +17,9 @@ spec/spec_helper.rb:
   unmanaged: true
 .github/workflows/release.yml:
   unmanaged: false
-.travis.yml:
-  delete: true
+
 changelog_since_tag: 'v11.0.3'
+
 Rakefile:
   changelog_max_issues: 500
   extra_disabled_lint_checks:
