--- a/.sync.yml
+++ b/.sync.yml
@@ -25,3 +25,10 @@ Rakefile:
   extra_disabled_lint_checks:
     - anchor_resource
     - params_empty_string_assignment
+
+Gemfile:
+  overrides:
+    - gem: puppet_litmus
+      git: https://github.com/puppetlabs/puppet_litmus.git
+      branch: main
+      platforms: [ 'ruby', 'x64_mingw' ]
