--- a/.github/workflows/release_prep.yml
+++ b/.github/workflows/release_prep.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   release_prep:
-    uses: "puppetlabs/cat-github-actions/.github/workflows/module_release_prep.yml@main"
+    uses: "puppetlabs/cat-github-actions/.github/workflows/module_release_prep.yml@forked-modules"
     with:
       version: "${{ github.event.inputs.version }}"
     secrets: "inherit"
