--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -7,10 +7,10 @@ on:
 
 jobs:
   Spec:
-    uses: "puppetlabs/cat-github-actions/.github/workflows/module_ci.yml@main"
+    uses: "h0tw1r3/cat-github-actions/.github/workflows/module_ci.yml@forked-modules"
     secrets: "inherit"
 
   Acceptance:
     needs: Spec
-    uses: "puppetlabs/cat-github-actions/.github/workflows/module_acceptance.yml@main"
+    uses: "h0tw1r3/cat-github-actions/.github/workflows/module_acceptance.yml@forked-modules"
     secrets: "inherit"
